# openrewrite-db-mcp

./: .gitignore  README.md  README_MCP.md  example_usage.py  extract_recipes.py  main.py  pyproject.toml
.clinerules/: git-branchs-commits.md
.github/workflows/: ci.yml
lib/: __init__.py  mcp_service.py  recipe_extractor.py  recipe_repository.py
mcp_server/: __init__.py  main.py  server.py
tests/: __init__.py  sample_recipes.json  test_when_cli_input_validation_and_navigation_tests.py  test_when_dataset_is_malformed_tests.py  test_when_fetch_all_categories_mcp_tests.py  test_when_fetch_all_categories_tests.py  test_when_fetch_categories_with_subcategories_mcp_tests.py  test_when_fetch_categories_with_subcategories_tests.py  test_when_fetch_recipe_by_id_tests.py  test_when_fetch_recipes_by_category_and_subcategory_tests.py  test_when_fetch_recipes_by_dependency_tests.py  test_when_fetch_recipes_by_name_tests.py  test_when_fetch_recipes_by_tag_tests.py  test_when_fetch_subcategories_by_category_mcp_tests.py  test_when_fetch_subcategories_by_category_tests.py  test_when_generating_sha256_tests.py  test_when_mcp_server_tests.py  test_when_query_categories_tests.py  test_when_query_categories_with_subcategories_tests.py  test_when_query_recipe_by_id_mcp_tests.py  test_when_query_recipe_by_id_tests.py  test_when_query_recipes_by_category_and_subcategory_tests.py  test_when_query_recipes_by_category_mcp_tests.py  test_when_query_recipes_by_dependency_mcp_tests.py  test_when_query_recipes_by_dependency_tests.py  test_when_query_recipes_by_name_mcp_tests.py  test_when_query_recipes_by_name_tests.py  (+9 more)
(+2 files in other folders)
