[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openrewrite-db-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "jsonpath-ng>=1.5.0",
    "ijson>=3.2.0",
    "mcp>=1.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["When*Tests"]
python_functions = ["test_*"]
